--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Cookie Decliner",
   "version": "1.0.0",
   "description": "Automatically decline cookie consent popups",
-  "content_security_policy": "script-src 'self'; object-src 'self'; style-src 'self' 'unsafe-inline'",
   "permissions": ["activeTab"],
   "content_scripts": [
     {
@@ -21,7 +20,7 @@
       "all_frames": true
     }
   ],
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_title": "Cookie Decliner"
   },
