--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,12 @@
   "name": "Cookie Decliner",
   "version": "1.0.0",
   "description": "Automatically decline cookie consent popups",
+  "minimum_chrome_version": "88",
   "permissions": ["activeTab"],
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
+  ],
   "content_scripts": [
     {
       "matches": [
@@ -29,5 +34,8 @@
     "32": "icons/icon32.svg",
     "48": "icons/icon48.svg",
     "128": "icons/icon128.svg"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
   }
 }
